fixed about layout issues

--- a/portfolio/src/About/About.css
+++ b/portfolio/src/About/About.css
@@ -15,3 +15,9 @@
 .skill-logo:hover{
     scale: 1.1;
 }
+.grid-column{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items:center;
+}
